src/PathfindingVisualizer/Node/Node.css
.node {
  width: 25px;
  height: 25px;
  outline: 1px solid rgb(175, 216, 248);
  display: inline-block;
}

.node-finish {
  background-image: url(../Styling/end.svg);
  background-repeat: no-repeat;
  background-size: contain;
}

.node-start {
  background-image: url(../Styling/start.svg);
  background-repeat: no-repeat;
  background-size: contain;
}

.node-wall {
  background-color: rgb(12, 53, 71);
  background-repeat: no-repeat;
  background-size: contain;
}

